--- a/projects/fuzz_testing/test/Safe.t.sol.1
+++ b/projects/fuzz_testing/test/Safe.t.sol.1
@@ -2,7 +2,7 @@
 // ANCHOR: all
 pragma solidity 0.8.10;
 
-import "forge-std/Test.sol";
+import {Test} from "forge-std/Test.sol";
 
 contract Safe {
     receive() external payable {}
@@ -23,7 +23,7 @@ contract SafeTest is Test {
         safe = new Safe();
     }
 
-    function testWithdraw() public {
+    function test_Withdraw() public {
         payable(address(safe)).transfer(1 ether);
         uint256 preBalance = address(this).balance;
         safe.withdraw();
