--- a/translations/projects/fuzz_testing/test/Safe.t.sol.2
+++ b/translations/projects/fuzz_testing/test/Safe.t.sol.2
@@ -2,7 +2,7 @@
 // ANCHOR: all
 pragma solidity 0.8.10;
 
-import "forge-std/Test.sol";
+import {Test} from "forge-std/Test.sol";
 
 contract Safe {
     receive() external payable {}
@@ -26,7 +26,7 @@ contract SafeTest is Test {
     }
 
     // ANCHOR: test
-    function testWithdraw(uint256 amount) public {
+    function testFuzz_Withdraw(uint256 amount) public {
         payable(address(safe)).transfer(amount);
         uint256 preBalance = address(this).balance;
         safe.withdraw();
